<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" >BMI
    </string>
    <string name="action_settings" >Settings
    </string>
    <string name="bmi_height" >身高
    </string>
    <string name="bmi_weight" >體重
    </string>
    <string name="bmi_btn" >計算BMI指數！
    </string>
    <string name="bmi_result" >你的BMI指數是:
    </string>
    <string name="bmi_suggest" >
    </string>
    <string name="about_title" >關於BMI
    </string>
    <string name="about_msg" >Android BMI Calc
    </string>
    <string name="about_btn" >沒問題！
    </string>
    <string name="about_homepage" >開首頁！
    </string>
    <string name="about_homepage_uri" >http://google.com/
    </string>
    <string name="about_map" >逛地圖！
    </string>
    <string name="about_map_uri" >geo:25.047192, 121.516981
    </string>
    <string name="about_dial" >撥電話！
    </string>
    <string name="about_dial_uri" >tel:123456789
    </string>
    <string name="toast_msg" >出錯了！！
    </string>

</resources>
