<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bmi_height"
            android:id="@+id/textView3"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
    />

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/height"
            android:layout_below="@+id/textView3"
            android:layout_alignLeft="@+id/textView3"
    />
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bmi_weight"
            android:id="@+id/textView"
            android:layout_below="@+id/height"
            android:layout_alignLeft="@+id/height"
    />
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/weight"
            android:layout_below="@+id/textView"
            android:layout_alignLeft="@+id/textView"
    />
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/bmi_btn"
            android:id="@+id/submit"
            android:layout_below="@+id/weight"
            android:layout_alignLeft="@+id/weight"
    />
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bmi_result"
            android:id="@+id/result"
            android:layout_below="@+id/submit"
            android:layout_alignLeft="@+id/submit"
    />
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bmi_suggest"
            android:id="@+id/suggest"
            android:layout_below="@+id/result"
            android:layout_alignLeft="@+id/result"
    />

</RelativeLayout>
